--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </fieldset>
             </div>    
         </div>
-        <div class="row col-12">
+        <div class="row col-12 justify-content-between ">
             <div class="row col-6 mx-1">
                 <div class="d-flex flex-column">
                     <div class="mb-3">
@@ -54,7 +54,7 @@
                         <label for="exampleInputEmail1" class="form-label mt-1">City</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"></div>
                     <div>
-                        <div class="mt-3">
+                        <div class="mt-3 mb-3">
                             <label>We accept:</label>
                         </div>
                         <div class=" col-6 d-flex justify-content-between bg-secondary py-2 px-2">
@@ -73,12 +73,12 @@
                     </div>
                 </div>
             </div>
-            <div class="row col-6">
+            <div class="row col-6 px-0">
                 <div class="mb-0">
                     <label for="exampleInputEmail1" class="form-label">Last Name</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
-                <div class="row col-12 g-3  justify-content-between mt-0">
+                <div class="row col-12 mx-0">
                     <div class="col-6 ps-2 mt-4 pb-2">
                         <label for="exampleInputEmail1" class="form-label">State</label>
                         <select class="form-select" aria-label="Default select example">
@@ -88,7 +88,7 @@
                             <option value="3">Risaralda</option>
                         </select>
                     </div>
-                    <div class="col-6 mt-4">
+                    <div class="col-6 mt-4 ">
                         <label for="exampleInputEmail1" class="form-label">Postal Code</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
