--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <title>Form</title>
 </head>
 <body>
-    <div class="container mt-3" >
-        <h1 class="title ">Payment form example</h1>
+    <div class="container mt-3 border border-secondary px-0">
+        <h1 class="title border border-secondary d-flex mx-0">Payment form example</h1>
         <div class="some-fields">
-            <div class="some-fields-1 ">
+            <div class="some-fields-1 border border-secondary">
                 <h6>Some fields are missing</h6>
             </div>
             <div class="row row-cols-lg-auto g-3 align-items-center mt-2">
@@ -101,9 +101,9 @@
                     <label for="exampleInputEmail1" class="form-label">Add any note here</label>
                 </div>
             </div>
-            <div class="d-grid gap-2 d-md-flex justify-content-md-end bg-danger py-3">
+            <div class="d-grid gap-2 d-md-flex justify-content-md-end bg-secondary-subtle ps-2 py-3 border border-secondary">
                 <button class="btn btn-secondary me-md-0" type="button">Cancel</button>
-                <button class="btn btn-primary" type="button">Send</button>
+                <button class="btn btn-primary me-2" type="button">Send</button>
                 </div>
             </div>
     </div>
