--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Form</title>
 </head>
 <body>
-    <div class="container mt-3 border border-secondary px-0">
+    <div class="container card mt-5 border border-secondary px-0">
         <h1 class="title border border-secondary d-flex mx-0">Payment form example</h1>
         <div class="some-fields">
             <div class="some-fields-1 border border-secondary">
