--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 <body>
     <div class="container card mt-5 border border-secondary px-0">
-        <h1 class="title border border-secondary d-flex mx-0">Payment form example</h1>
+        <h1 class="title border border-secondary d-flex mx-0 bg-light">Payment form example</h1>
         <div class="some-fields">
-            <div class="some-fields-1 border border-secondary">
+            <div class="some-fields-1 rounded-1 border border-secondary">
                 <h6>Some fields are missing</h6>
             </div>
             <div class="row row-cols-lg-auto g-3 align-items-center mt-2">
@@ -57,7 +57,7 @@
                         <div class="mt-3 mb-3">
                             <label>We accept:</label>
                         </div>
-                        <div class=" col-6 d-flex justify-content-between bg-secondary py-2 px-2">
+                        <div class=" col-6 d-flex justify-content-between rounded-1 bg-secondary py-2 px-2">
                                 <input class="form-check-input ms-2" type="radio" name="radioDefault" id="radioDefault1">
                                 <label class="form-check-label " for="radioDefault1"><i class="fa-brands fa-cc-mastercard"style="color: #ecebef;"></i></label>
                             
@@ -79,7 +79,7 @@
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
                 <div class="row col-12 mx-0">
-                    <div class="col-6 ps-2 mt-4 pb-2">
+                    <div class="col-6 px-0 ms-0 mt-4 pb-2">
                         <label for="exampleInputEmail1" class="form-label">State</label>
                         <select class="form-select" aria-label="Default select example">
                             <option selected>Pick a State</option>
@@ -88,7 +88,7 @@
                             <option value="3">Risaralda</option>
                         </select>
                     </div>
-                    <div class="col-6 mt-4 ">
+                    <div class="col-6 mt-4 pe-0">
                         <label for="exampleInputEmail1" class="form-label">Postal Code</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
@@ -101,10 +101,11 @@
                     <label for="exampleInputEmail1" class="form-label">Add any note here</label>
                 </div>
             </div>
-            <div class="d-grid gap-2 d-md-flex justify-content-md-end bg-secondary-subtle ps-2 py-3 border border-secondary">
+            <div class="col-12">
+            <div class="d-grid gap-2 d-flex justify-content-md-end bg-light px-0 py-3 border border-secondary">
                 <button class="btn btn-secondary me-md-0" type="button">Cancel</button>
                 <button class="btn btn-primary me-2" type="button">Send</button>
-                </div>
+            </div>
             </div>
     </div>
 
