ms-2 between bottons

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="col-12 card-footer">
             <div class="d-flex justify-content-md-end">
                 <button class="btn btn-secondary me-md-0" type="button">Cancel</button>
-                <button class="btn btn-primary me-2" type="button">Send</button>
+                <button class="btn btn-primary ms-2 type="button">Send</button>
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
